--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>test102</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </br> laborum incidunt enim totam aspernatur cupiditate error quos esse hic quisquam fuga ad veritatis, soluta placeat, reprehenderit necessitatibus delectus porro iusto.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </br> 
+        laborum incidunt enim totam aspernatur cupiditate error quos esse hic quisquam fuga ad veritatis, </br>
+        soluta placeat, reprehenderit necessitatibus delectus porro iusto.</p>
 </body>
 </html>
